--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -6,22 +6,12 @@ html, body {
     background-color: #000;
 }
 
-#container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-#loading-screen,
-#gameFrame {
+#loading-screen {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-#loading-screen {
     background-color: #000;
     color: #fff;
     display: flex;
@@ -33,15 +23,23 @@ html, body {
 #progress-bar-container {
     width: 80%;
     background-color: #333;
+    border-radius: 10px;
     margin-top: 20px;
 }
 
 #progress-bar {
     width: 0%;
     height: 20px;
+    border-radius: 10px;
     background-color: #4caf50;
 }
 
-#gameFrame {
+#iframe, #gameFrame {
+    width: 100%;
+    height: 100%;
+    border: none;
     display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
