Add mobile iframe css

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -43,3 +43,14 @@ html, body {
     top: 0;
     left: 0;
 }
+
+@media (max-width: 768px) {
+    #iframe, #gameFrame {
+        width: 320px;
+        height: 480px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
